--- a/admin/product.html
+++ b/admin/product.html
@@ -210,7 +210,7 @@
 				for(var loop =0; loop<data.length; loop++){
 
 					data[loop].frontPicture = (data[loop].frontPicture != "") ? "../assets/products/large/" + data[loop].frontPicture : "../assets/default/no.gif";
-					data[loop].price  = (data[loop].price != "") ? normalFormatChanger(data[loop].price) : "0";
+					// data[loop].price  = (data[loop].price != "") ? normalFormatChanger(data[loop].price) : "0";
 
 		    		html = html +
 		    		'<div class="col-md-3 border-all">'+
