--- a/admin/formProduct.html
+++ b/admin/formProduct.html
@@ -68,10 +68,10 @@
 						'<label>Dimension</label>'+
 						'<input name="dimension" type="text" class="form-control">'+
 					'</div>'+
-					'<div class="form-group">'+
-						'<label>Price</label>'+
-						'<input name="price" type="text" class="form-control">'+
-					'</div>'+
+					// '<div class="form-group">'+
+					// 	'<label>Price</label>'+
+					// 	'<input name="price" type="text" class="form-control">'+
+					// '</div>'+
 				'</div>';
 
 				html = html +
@@ -127,7 +127,7 @@
 				$('main.parent-admin .main-content').append(html);
 
 				numberOnlyActivator('[name="qty"]');
-				currencyFormatActivator('[name="price"]');
+				// currencyFormatActivator('[name="price"]');
 				imagePreviewActivator('[preview-id]');
 
 				var oData = p_getData('operation', 'cms_storyOption');
@@ -150,7 +150,7 @@
 					}
 				}
 
-				currencyFormatChanger('[name="price"]');
+				// currencyFormatChanger('[name="price"]');
 				p_formHandler('syncrom', 'updateData', 'product.html');
 			}
 		</script>
