--- a/admin/formChatter.html
+++ b/admin/formChatter.html
@@ -8,7 +8,7 @@
 		<link rel="icon" type="image/x-icon" href="../assets/PICS/TL_Favicon.png">
 		<!-- Site Properities -->
 		<title>Tulisan</title>
-	  
+
 		<link href="../assets/css/bootstrap.min.css" rel="stylesheet">
 		<link href="../assets/css/font-awesome.min.css" rel="stylesheet">
 		<link href="../assets/css/syncard-inject.css" rel="stylesheet">
@@ -19,17 +19,17 @@
 			<header class="parent-admin"></header>
 
 			<main class="parent-admin"></main>
-					
+
 			<footer class="parent-admin"></footer>
 		</div>
 
 		<!-- Script collection -->
 		<script type="text/javascript" src="../assets/js/jquery-3.2.1.min.js"></script>
 		<script type="text/javascript" src="../assets/js/jquery-ui-1.10.0.custom.min.js"></script>
-		<script type="text/javascript" src="../assets/js/bootstrap.min.js"></script>	
-		<script type="text/javascript" src="../assets/js/syncard.js"></script>	
-		<script type="text/javascript" src="../assets/js/public.js"></script>	
-		<script type="text/javascript" src="../assets/js/nicEdit.js"></script>	
+		<script type="text/javascript" src="../assets/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="../assets/js/syncard.js"></script>
+		<script type="text/javascript" src="../assets/js/public.js"></script>
+		<script type="text/javascript" src="../assets/js/nicEdit.js"></script>
 
 		<!-- page script -->
 		<script type="text/javascript">
@@ -56,11 +56,14 @@
 							'<label>Date</label>'+
 							'<input name="date" type="text" class="form-control">'+
 						'</div>'+
-						'<div class="clearfix"></div>'+
-						'<div class="btn-group">'+
-							'<button class="btn btn-warning" type="submit">Create</button>'+
-							'<button class="btn btn-warning" type="button">Cancel</button>'+
+						'<div class="form-group select-box">' +
+							'<label>Type</label>' +
+							'<select name="type" class="form-control">' +
+								'<option value="Media Coverage">Media Coverage</option>' +
+								'<option value="Press Release">Press Release</option>' +
+							'</select>' +
 						'</div>'+
+						'<div class="clearfix"></div>'+
 					'</div>' +
 					'<div class="input-frame col-md-6">'+
 						'<div class="form-group">'+
@@ -73,6 +76,14 @@
 							'<input name="picture" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
 						'</div>' +
 					'</div>' +
+					'<div class="clearfix"></div>'+
+					'<hr/>' +
+					'<div class="input-frame col-md-6">'+
+						'<div class="btn-group">'+
+							'<button class="btn btn-warning" type="sumbit">Create</button>'+
+							'<a href="chatter.html" class="btn btn-warning" type="reset">Cancel</a>'+
+						'</div>'+
+					'</div>'+
 				'</form>';
 
 				// html = html + '</div>';
@@ -93,7 +104,7 @@
 
 				for (var key in xData) {
 					if($("[name='" + key + "']").attr('type') != "file") $("[name=" + key + "]").val(xData[key]);
-					else{ 
+					else{
 						if(xData[key]!="") $("[name-tag=" + key + "]").attr('src', '../assets/chatters/' + xData[key]);
 						else $("[name-tag='" + key + "']").attr('src', '../assets/default/chatters.gif');
 					}
